--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.11.4",
     "axios": "^1.5.1",
+    "gapi": "^0.0.3",
     "gapi-script": "^1.2.0",
     "mdb-react-ui-kit": "^7.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-calendar": "^4.8.0",
+    "react-chat-engine-pretty": "^0.1.8",
     "react-dom": "^18.2.0",
+    "react-google-login": "^5.2.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.17.0",
